--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,16 +5,9 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="styles/bundle.css">
     </head>
     <body>
-
-      <section class="container">
-        <h1>It was installed correctly.</h1>
-        <p>How fantastic.</p>
-      </section>
-
-      <script src="js/bundle.js"></script>
+        <div id="app"></div>
     </body>
 </html>
